# loader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: candidate.yml  ci.yml  release.yml
src/: api.rs  bootloader.rs  bridge_control.rs  halfkay.rs  hex.rs  lib.rs  main.rs  operation.rs  operation_runner.rs  reboot_api.rs  selector.rs  serial_reboot.rs  targets.rs  teensy41.rs
src/bridge_control/: cmd.rs  ipc.rs  mod.rs  process.rs  service.rs
src/halfkay/: win32.rs
