[package]
name = "midi-studio-loader"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Teensy 4.1 flasher CLI for MIDI Studio (HalfKay bootloader)"
repository = "https://github.com/petitechose-midi-studio/loader"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json"]

[[bin]]
name = "midi-studio-loader"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"], optional = true }
hidapi = "2.6.3"
serialport = "4.6.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", optional = true }
sysinfo = "0.30.13"
thiserror = "1.0.61"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.15.0"
